# example

./: CMakeLists.txt  main.c
